--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "cloudinary-sass",
   "version": "0.1.0",
   "description": "Sass functions and mixins to provide responsive images via Cloudinary",
-  "main": "index.scss",
+  "main": "src/index.scss",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "sass src/index.scss"
+    "build": "sass src/index.scss",
+    "test": "sass tests/index.scss"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/al-the-x/cloudinary-sass#readme",
   "devDependencies": {
-    "sass": "^1.27.0"
+    "sass": "^1.27.0",
+    "sass-true": "^6.0.1"
   }
 }
